Fix broken multi-column render on iOS Safari

--- a/src/_assets/css/components/_toc.css
+++ b/src/_assets/css/components/_toc.css
@@ -32,6 +32,7 @@
 
 		margin-block-end: max(8px, var(--size-xs));
 		break-inside: avoid;
+		break-inside: avoid-page;
 
 		&::before {
 			content: counter(tocList, var(--toc-marker-type, decimal)) ' ';
